* Change required MPI library from PyxMPI to mpi4py.
* Move all of the cogent.draw.matplotlib.* modules up to cogent.draw.*
* Substitute matplotlib for reportlab throughout cogent.draw
* cogent.db.ensembl code updated to work with the latest Ensembl release (56)
* motif prob pseudocount option, used for initial values of optimisable mprobs

Bug Fixes
---------
* Fix and test for two bugs in multiple alignment, One in the pairwise.py
  Hirschberg code and the other in indel_positions.py where gaps at the end
  were effectively taken to be deletions and never insertions, unlike gaps at
  the start.
* fix #2811993 alignment getMotifProbs. allow_gap argument now has an effect.

Cogent 1.2 - 1.3
================

New Features
------------

* Python2.6 is now supported
* added cogent.cluster.nmds, code to perform nonmetric multidimensional
  scaling.  Not as fast as others (e.g.: R, MASS package, isoMDS)
* Documentation ported to using the Sphinx documentation generator.
* Major additions to documentation in doc/examples.
* Added partial support for querying the Ensembl MySQL databases. This
  capacity has additional dependencies (MySQL-python and SQLAlchemy). This
  module should be considered alpha level code, (although it has worked
  reliably for some time in the hands of the developers).
* Introduced a new substitution model family. This family has the same form as
  that originally described by Muse and Gaut (Mol Biol Evol, 11, 715-24).
  These models were applied in the article by Lindsay et al. (2008, Biol
  Direct, 3, 52). Model state defaults to the tuple weighted matrix (eg. the
  Goldman and Yang codon models). Selecting the nucleotide weighted matrix is
  done using the mprob_model argument.
* Likelihood functions now have a getStatistics method. This returns cogent
  Table objects. Optional arguments are with_motif_probs and with_titles where
  the latter refers to the Table.Title attribute being set.
* Added rna_struct formatter and rna_plot parser