@@ -215,7 +215,6 @@ def suite():
             ('sfold.X86_64.LINUX', 'test_sfold'),
             ('stride', 'test_stride'),
             ('hybrid-ss-min', 'test_unafold'),
-            ('mlagan', 'test_lagan'),
             ('cd-hit', 'test_cd_hit'),
             ('calculate_likelihood', 'test_gctmpca')
             ]
